Mon Sep  9 16:35:39 1991  Lars Willf|r  (willfor at robin)

	* Tog bort den gamla funktionen lyskom-show-broadcast-message
	  (ers{tts av lyskom-show-personal-message) och den av den
	  funktionen anv{nda str{ngen broadcast-from.

	* async.el och swedish-strings.el: Nu visas tiden (enligt
	  klienten) n{r man f}r ett personligt eller allm{nt meddelande.

Sun Sep  8 21:51:41 1991  Per Cederqvist  (ceder at robin)

	* commands1.el (lyskom-jump): Stabiliserat. Nu g|rs n}got vettigt
	  n{r mark-as-read {r nil.

Thu Sep  5 15:55:30 1991  Linus Tolke Y  (linus at lysator)

	* lyskom-rest.el, vars.el, swedish-strings.el (kom-save-text): Nu
	  kommer den ih}g default fil och dir.

	* view-text.el (lyskom-print-text): Nu uppdaterar vi sk{rmen innan
	  vi jobbar vidare med parsningen av cachen.

Wed Sep  4 17:21:17 1991  Linus Tolke Y  (linus at lysator)

	* internal.el (lyskom-apply-handler): Det funkade inte att
	  }terskapa felet.

Tue Sep  3 18:43:43 1991  Per Cederqvist  (ceder at lysator)

	* misc/To-do heter numera misc/TODO.

Mon Sep  2 00:26:03 1991  Linus Tolke Y  (linus at lysator)

	* review.el (kom-review-backward): Fixat s} att den skriver ut
	  korrekta texter om huruvida vi l{ser fram}t eller bak}t.

Sun Sep  1 18:03:44 1991  Linus Tolke Y  (linus at robin)

	* commands1.el (kom-write-comment): Lagt till s} att vi visar
	  vilken text vi kommenterar i bufferten.

Wed Aug 28 22:06:21 1991  Linus Tolke Y  (linus at lysator)

	* edit-text.el (lyskom-edit-mode): paragraph-separate initierades
	  fr}n paragraph-start.

	* internal.el (lyskom-apply-handler): h{r f}ngade vi quit utan att
	  }terskapa det igen.

Wed Aug 28 05:18:27 1991  Per Cederqvist  (ceder at lysator)

	* commands2.el (lyskom-status-pers-2), swedish-strings.el
	  (lyskom-strings): Fixade ledtexten vid skapade personer.

Fri Aug 23 02:38:58 1991  Linus Tolke Y  (linus at robin)

	* swedish-strings.el (lyskom-strings): Tagit bort ett space f|r
	  mycket vid ]terse  senaste av  (info-by-to).
