@@ -1,5 +1,8 @@
 Mon Sep  9 16:35:39 1991  Lars Willf|r  (willfor at robin)
 
+	* Tog bort hanteringen av den gamla typen av
+	  broadcast-meddelanden.
+
 	* Tog bort den gamla funktionen lyskom-show-broadcast-message
 	  (ers{tts av lyskom-show-personal-message) och den av den
 	  funktionen anv{nda str{ngen broadcast-from.
